made code compatible with java 8